--- a/website-html/index.html
+++ b/website-html/index.html
@@ -29,35 +29,33 @@
       <section>
         <h2>Start up project</h2>
         <p>
-          This is where the description and link to my start up project will go.
+          <a href="https://startup.lightbikebattle.click/">LightbikeBattle</a>
         </p>
       </section>
       <section>
         <h2>Simon project</h2>
         <p>
-          This is where the description and link to my implementation of the
-          Simon will go.
+          <a href="https://simon.lightbikebattle.click/">SimonGame</a>
         </p>
       </section>
       <section>
         <h2>Web programming assignments</h2>
-        <p>Replace the links below with your CodePen links.</p>
         <h3>HTML</h3>
         <ul>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/abKYRqN">Introduction</a>
+            <a href="https://codepen.io/C4LV1NPU6/pen/bGjOxEJ">Introduction</a>
             - Basic HTML page example
           </li>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/GRGBqbw">Structure</a> -
+            <a href="https://codepen.io/C4LV1NPU6/pen/KKBbxaw">Structure</a> -
             All the elements for creating page structure
           </li>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/dyVdNej">Input</a> - All
+            <a href="https://codepen.io/C4LV1NPU6/pen/dyjwqRe">Input</a> - All
             the elements for receiving user input
           </li>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/OJEwgBa">Media</a> - All
+            <a href="https://codepen.io/C4LV1NPU6/pen/KKBbxyd">Media</a> - All
             the elements for rendering media objects
           </li>
         </ul>
