Final CSS modification.

--- a/simon/play.html
+++ b/simon/play.html
@@ -60,10 +60,10 @@
 
     <footer class="bg-dark text-dark text-muted">
       <div class="container-fluid">
-        <span class="text-reset">Author Name(s)</span>
+        <span class="text-reset">C4LV1NPU6</span>
         <a
           class="text-reset"
-          href="https://github.com/webprogramming260/simon-css"
+          href="https://github.com/C4LV1NPU6/byu-cs260/tree/main/simon"
           >Source</a
         >
       </div>
