--- a/website-html/index.html
+++ b/website-html/index.html
@@ -44,19 +44,30 @@
         <ul>
           <li>
             <a href="https://codepen.io/C4LV1NPU6/pen/bGjOxEJ">Introduction</a>
-            - Basic HTML page example
           </li>
           <li>
-            <a href="https://codepen.io/C4LV1NPU6/pen/KKBbxaw">Structure</a> -
-            All the elements for creating page structure
+            <a href="https://codepen.io/C4LV1NPU6/pen/KKBbxaw">Structure</a>
           </li>
           <li>
-            <a href="https://codepen.io/C4LV1NPU6/pen/dyjwqRe">Input</a> - All
-            the elements for receiving user input
+            <a href="https://codepen.io/C4LV1NPU6/pen/dyjwqRe">Input</a>
           </li>
           <li>
-            <a href="https://codepen.io/C4LV1NPU6/pen/KKBbxyd">Media</a> - All
-            the elements for rendering media objects
+            <a href="https://codepen.io/C4LV1NPU6/pen/KKBbxyd">Media</a>
+          </li>
+        </ul>
+	<h3>CSS</h3>
+        <ul>
+          <li>
+            <a href="https://codepen.io/C4LV1NPU6/pen/WNKVodL">Practice</a>
+          </li>
+          <li>
+            <a href="https://codepen.io/C4LV1NPU6/pen/dyqbwwB">Flex</a>
+          </li>
+          <li>
+            <a href="https://codepen.io/C4LV1NPU6/details/QWVWJdz">Frameworks</a>
+          </li>
+          <li>
+            <a href="https://codepen.io/C4LV1NPU6/details/QWVWJdz">Bootstrap</a>
           </li>
         </ul>
       </section>
