Final Simon JS: Finishing touches.

--- a/simon/scores.html
+++ b/simon/scores.html
@@ -46,7 +46,8 @@
             <th>Score</th>
             <th>Date</th>
           </tr>
-        </thead id="scores"></tbody>
+        </thead>
+        <tbody id="scores"></tbody>
       </table>
     </main>
 
