--- a/startup/index.html
+++ b/startup/index.html
@@ -2,40 +2,48 @@
 <html lang="en">
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link rel="stylesheet" href="index.css"/>
-  <link 
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
-    rel="monospace" 
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
-    crossorigin="anonymous" 
-  />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="index.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="monospace" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
 </head>
 
 <body>
   <header>
-    <h1 class="title" style="--sn: 19; --wn: 13em;">Welcome to the Grid</h1>
+    <h1 class="text" style="--tn: 2.5s; --sn: 19; --en: 6; --wn: 13em;">Welcome to the Grid</h1>
   </header>
+
   <main>
-    <section>
-      <h2 class="title" style="--sn: 5; --wn: 3.4em;">Stats</h2>
-    </section>
-    <section>
-      <h2>Game (to be implemented).</h2>
-    </section>
-    <section>
-      <h2 class="title" style="--sn: 4; --wn: 2.7em;">Chat</h2>
+    <section id="logregform">
+      <form onsubmit="return login()">
+        <div class="form-floating">
+          <input type="username" class="form-control" id="logusername" placeholder="Username">
+        </div>
+        <div class="form-floating">
+          <input type="password" class="form-control" id="logpassword" placeholder="Password">
+        </div>
+        <button class="button" type="submit">Login</button>
+      </form>
+      <form onsubmit="return register()">
+        <div class="form-floating">
+          <input type="username" class="form-control" id="regusername" placeholder="Username">
+        </div>
+        <div class="form-floating">
+          <input type="password" class="form-control" id="regpassword" placeholder="Password">
+        </div>
+        <button class="button" type="submit">Register</button>
+      </form>
     </section>
   </main>
+
   <footer>
-    <h2 class="title" style="--sn: 31; --wn: 21.2em;">From C4LV1NPU6 and rokketranger</h2>
-    <a class="title" href="https://github.com/C4LV1NPU6/byu-cs260/tree/main/startup">Source</a>
+    <h2 class="text" style="--tn: 2.5s; --sn: 31; --en: 6; --wn: 21.2em;">From C4LV1NPU6 and rokketranger</h2>
+    <a class="text" href="https://github.com/C4LV1NPU6/byu-cs260/tree/main/startup">Source</a>
   </footer>
-  <script 
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" 
-    crossorigin="anonymous">
-  </script>
+
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
+  </script> -->
+
+  <script src="index.js"></script>
 </body>
 
 </html>
