--- a/startup/public/game.html
+++ b/startup/public/game.html
@@ -26,13 +26,16 @@
         <canvas id="arena" width="800" height="800">
       </div>
       <div class="form-floating">
+        <h2 class="text" id="controls">Enter: (re)start game.   Shift: pause/resume game.</h2>
+      </div>
+      <div class="form-floating">
         <button type="button" class="btn btn-primary" onclick="logout()">Logout</button>
       </div>
     </section>
     <section id="chat">
       <h2 class="text" style="--tn: 1s; --sn: 4; --en: 3; --wn: 2.7em;">Chat</h2>
       <div class="form-floating">
-        <input type="chat" class="form-control" id="chat" placeholder="Chat">
+        <input type="chat" class="form-control" id="chatbox" placeholder="Chat">
       </div>
       <button type="button" class="btn btn-primary" onclick="sendMsg()">Send</button>
     </section>
