Sixth Startup Service commit: Finished everything.

--- a/startup/public/game.html
+++ b/startup/public/game.html
@@ -42,7 +42,7 @@
   </main>
 
   <footer>
-    <h2 class="text" style="--tn: 2.5s; --sn: 31; --en: 6; --wn: 21.2em;">From C4LV1NPU6 and rokketranger</h2>
+    <h2 class="text" style="--tn: 2.5s; --sn: 14; --en: 3; --wn: 9.6em;">From C4LV1NPU6</h2>
     <a class="text" href="https://github.com/C4LV1NPU6/byu-cs260/tree/main/startup">Source</a>
   </footer>
 
