--- a/startup/public/menu.html
+++ b/startup/public/menu.html
@@ -19,11 +19,14 @@
       </div>
       <button type="button" class="btn btn-primary" onclick="joinLobby()">Join</button>
       <button type="button" class="btn btn-primary" onclick="hostLobby()">Host</button>
+      <div class="form-floating">
+        <button type="button" class="btn btn-primary" onclick="logout()">Logout</button>
+      </div>
     </section>
   </main>
 
   <footer>
-    <h2 class="text" style="--tn: 2.5s; --sn: 31; --en: 6; --wn: 21.2em;">From C4LV1NPU6 and rokketranger</h2>
+    <h2 class="text" style="--tn: 2.5s; --sn: 14; --en: 3; --wn: 9.6em;">From C4LV1NPU6</h2>
     <a class="text" href="https://github.com/C4LV1NPU6/byu-cs260/tree/main/startup">Source</a>
   </footer>
 
