--- a/startup/public/game.html
+++ b/startup/public/game.html
@@ -25,11 +25,13 @@
       <div class="form-floating">
         <canvas id="arena" width="800" height="800">
       </div>
-      <div class="form-floating">
-        <h2 class="text" id="controls">Enter: (re)start game.   Shift: pause/resume game.</h2>
+      <div class="form-floating" id="controls">
+        <h2 class="text">W,A,S,D: direction.</h2>
+        <h2 class="text">Enter: (re)start game.</h2>
+        <h2 class="text">Shift: pause/resume game.</h2>
       </div>
-      <div class="form-floating">
-        <button type="button" class="btn btn-primary" onclick="logout()">Logout</button>
+      <div class="form-floating" id="exit">
+        <button type="button" class="btn btn-primary" onclick="exit()">Exit</button>
       </div>
     </section>
     <section id="chat">
