--- a/startup/public/game.html
+++ b/startup/public/game.html
@@ -9,7 +9,7 @@
 
 <body>
   <header>
-    <h1 class="text" style="--tn: 2.5s; --sn: 19; --en: 6; --wn: 13em;">Welcome to the Grid</h1>
+    <h1 class="text" style="--tn: 2.5s; --sn: 16; --en: 5; --wn: 13em;">Lightbike Battle</h1>
   </header>
 
   <main>
@@ -22,13 +22,11 @@
       <div class="form-floating">
         <h2 class="text" id="userName"></h2>
       </div>
-      <div class="form-floating">
+      <div class="form-floating" id="arenaborder">
         <canvas id="arena" width="800" height="800">
       </div>
       <div class="form-floating" id="controls">
-        <h2 class="text">W,A,S,D: direction.</h2>
-        <h2 class="text">Enter: (re)start game.</h2>
-        <h2 class="text">Shift: pause/resume game.</h2>
+        <h3 class="text">W,A,S,D: direction. Enter: (re)start game. Shift: pause/resume game.</h3>
       </div>
       <div class="form-floating" id="exit">
         <button type="button" class="btn btn-primary" onclick="exit()">Exit</button>
@@ -44,8 +42,7 @@
   </main>
 
   <footer>
-    <h2 class="text" style="--tn: 2.5s; --sn: 14; --en: 3; --wn: 9.6em;">From C4LV1NPU6</h2>
-    <a class="text" href="https://github.com/C4LV1NPU6/byu-cs260/tree/main/startup">Source</a>
+    <a class="text" style="--tn: 2.5s; --sn: 14; --en: 3; --wn: 9.6em;" href="https://github.com/C4LV1NPU6/byu-cs260/tree/main/startup">From C4LV1NPU6</a>
   </footer>
 
   <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
