--- a/startup/public/menu.html
+++ b/startup/public/menu.html
@@ -9,7 +9,7 @@
 
 <body>
   <header>
-    <h1 class="text" style="--tn: 2.5s; --sn: 19; --en: 6; --wn: 13em;">Welcome to the Grid</h1>
+    <h1 class="text" style="--tn: 2.5s; --sn: 17; --en: 6; --wn: 13em;">Select your Arena</h1>
   </header>
 
   <main>
@@ -26,8 +26,7 @@
   </main>
 
   <footer>
-    <h2 class="text" style="--tn: 2.5s; --sn: 14; --en: 3; --wn: 9.6em;">From C4LV1NPU6</h2>
-    <a class="text" href="https://github.com/C4LV1NPU6/byu-cs260/tree/main/startup">Source</a>
+    <a class="text" style="--tn: 2.5s; --sn: 14; --en: 3; --wn: 9.6em;" href="https://github.com/C4LV1NPU6/byu-cs260/tree/main/startup">From C4LV1NPU6</a>
   </footer>
 
   <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
