Fixed arena issues for Startup.

--- a/startup/public/menu.html
+++ b/startup/public/menu.html
@@ -22,6 +22,12 @@
       <div class="form-floating">
         <button type="button" class="btn btn-primary" onclick="logout()">Logout</button>
       </div>
+      <div class="form-floating" id="nameplate">
+      </div>
+      <div class="form-floating">
+        <h3 class="text">Hostable/Joinable arenas</h3>
+        <h3 class="text">reset every 5 minutes.</h3>
+      </div>
     </section>
   </main>
 
