--- a/website/index.html
+++ b/website/index.html
@@ -27,7 +27,7 @@
         </p>
       </section>
       <section>
-        <h2>Start up project</h2>
+        <h2>Startup project</h2>
         <p>
           <a href="https://startup.lightbikebattle.click/">LightbikeBattle</a>
         </p>
@@ -39,32 +39,12 @@
         </p>
       </section>
       <section>
-        <h2>Web programming assignments</h2>
-        <h3>HTML</h3>
-        <ul>
+        <h2>Assignments</h2>
           <li>
-            <a href="https://codepen.io/C4LV1NPU6/pen/bGjOxEJ">Introduction</a>
+            <a href="https://codepen.io/C4LV1NPU6">CodePens</a>
           </li>
           <li>
-            <a href="https://codepen.io/C4LV1NPU6/pen/KKBbxaw">Structure</a>
-          </li>
-          <li>
-            <a href="https://codepen.io/C4LV1NPU6/pen/dyjwqRe">Input</a>
-          </li>
-          <li>
-            <a href="https://codepen.io/C4LV1NPU6/pen/KKBbxyd">Media</a>
-          </li>
-        </ul>
-	<h3>CSS</h3>
-        <ul>
-          <li>
-            <a href="https://codepen.io/C4LV1NPU6/pen/WNKVodL">Practice</a>
-          </li>
-          <li>
-            <a href="https://codepen.io/C4LV1NPU6/pen/dyqbwwB">Flex</a>
-          </li>
-          <li>
-            <a href="https://codepen.io/C4LV1NPU6/details/QWVWJdz">Frameworks</a>
+            <a href="https://codesandbox.io/u/C4LV1NPU6">CodeSandBoxes</a>
           </li>
         </ul>
       </section>
